external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_type.move:3:17
  │
3 │         let x : = 0; // Test a missing let type (but with a colon)
  │                 ^
  │                 │
  │                 Unexpected '='
  │                 Expected a type name
