external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_type.move
module 0x42::M {
    fun f() {
        let x : = 0; // Test a missing let type (but with a colon)
    }
}
